<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/name_fragment_background">


    <ImageView
        android:id="@+id/rules_fragment_logo"
        android:layout_width="@dimen/rules_fragment_logo_width"
        android:layout_height="@dimen/rules_fragment_logo_height"
        android:layout_marginEnd="@dimen/rules_fragment_logo_margin_end"
        android:layout_marginTop="@dimen/rules_fragment_logo_margin_top"

        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/rules_fragment_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/rules_fragment_title"
        style="@style/RulesFragmentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/rules_fragment_title_margin_bottom"

        android:text="@string/rules_fragment_title"
        app:layout_constraintBottom_toTopOf="@+id/rules_fragment_scroll"
        app:layout_constraintLeft_toRightOf="@+id/rules_fragment_logo"
        app:layout_constraintRight_toRightOf="parent" />

    <ScrollView
        android:id="@+id/rules_fragment_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="@dimen/rules_fragment_scroll_margin_bottom"
        android:layout_marginEnd="@dimen/rules_fragment_scroll_margin_side"
        android:layout_marginStart="@dimen/rules_fragment_scroll_margin_side"
        android:layout_marginTop="@dimen/rules_fragment_scroll_margin_top">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/rules_fragment_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/RulesFragmentContent"
                android:text="@string/rules_fragment_content"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <CheckBox
        android:id="@+id/rules_fragment_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/RulesFragmentCheckBox"
        android:text="@string/rules_fragment_checkbox"
        android:checked="true"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="@dimen/rules_fragment_checkbox_margin_start"
        app:layout_constraintTop_toBottomOf="@+id/rules_fragment_scroll"
        />

</android.support.constraint.ConstraintLayout>